--- a/MvcLuceneSampleApp/Views/Home/Index.cshtml
+++ b/MvcLuceneSampleApp/Views/Home/Index.cshtml
@@ -9,14 +9,7 @@
 <head>
   <title>Lucene.Net ultra fast search for MVC or WebForms site => made easy!</title>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
-	<style type="text/css">
-		body {margin: 30px 100px;}
-		fieldset {padding: 13px 15px; margin-bottom: 30px;border: dotted 1px silver;}
-		table {border-spacing: 0;}
-		table th {padding: 3px 5px; text-align: left;background: grey;color: white;}
-		table td {padding: 3px 5px;}
-		.add_record p {float: left;}
-	</style>
+	<link href="@Url.Content("~/Content/style.css")" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<div>
@@ -25,7 +18,7 @@
 		
 		<h3>Simple Lucene.Net Usage Example Site</h3>
 		
-		<fieldset style="float: left; width: 30%;">
+		<fieldset class="content_left" style="width: 30%;">
 		  <legend>All records in database (@Html.ActionLink("Create Index [+]", "CreateIndex"))</legend> 
 			<table class="grid">
 				<tr>
@@ -43,7 +36,7 @@
 			</table>	
 		</fieldset>
 		
-		<fieldset style="float: left; width: 30%;">
+		<fieldset class="content_left" style="width: 30%;">
 		  <legend>All records in search index (@Html.ActionLink("Clear Index [X]", "ClearIndex"))</legend> 
 			@if (Model.AllSearchIndexData.Any()) {
 				<table class="grid">
@@ -67,12 +60,12 @@
 			}
 		</fieldset>
 		
-		<fieldset style="float: left; width: 30%;">
+		<fieldset class="content_left" style="width: 30%;">
 			<legend>Messages</legend>
 			<span style="color: green;">@TempData["Result"]</span>
 			<span style="color: red;">@TempData["ResultFail"]</span>
 		</fieldset>
-		<div style="clear: both;"></div>
+		<div class="clear"></div>
 
 		<fieldset class="add_record">
 			<legend>Add/Update search index record (use Id of existing one):</legend>
@@ -97,6 +90,8 @@
 		
 		<fieldset>
 			<legend>Search by full/partial Id, Name, or Description</legend>
+			<p>Also try these searches: <em>"1 3 5", "City", "Russia India"</em></p>
+
 			@using (Html.BeginForm("Search", "Home")) {
 				@Html.TextBoxFor(m => m.SearchTerm, new { style="width:30%;" })
 				@Html.DropDownListFor(m => m.SearchField,
@@ -109,6 +104,10 @@
 
 				<input type="submit" value="Search" />
 			}
+			<p>
+			  <strong>Note:</strong> if you don't like the ordering of Lucene results,
+				you can always reorder them via LINQ's <code>*.OrderBy(x => x.SMTH)</code>
+			</p>
 		</fieldset>
 		
 		@if (Model.SampleSearchResults.Any()) {
@@ -130,8 +129,13 @@
 				</table>
 			</fieldset>
 		}
-  </div>
-	
+
+	</div>
+
+	<div id="footer">
+		By <a target="_blank" href="http://www.codeproject.com/Members/devnoob">Mikhail T. (devnoob)</a>, 2012
+	</div>
+
 	<script type="text/javascript">
 		$(document).ready(function () {
 			$('#SearchTerm').focus();
