--- a/MvcLuceneSampleApp/Content/style.css
+++ b/MvcLuceneSampleApp/Content/style.css
@@ -1,11 +1,10 @@
 ﻿
 body {margin: 30px 100px; font-family: Trebuchet MS, Helvetica, Sans-Serif; font-size: small;}
-fieldset {padding: 13px 15px; margin-bottom: 30px;border: dotted 1px silver;}
+fieldset {padding: 0px 15px 13px 15px; margin-bottom: 30px;border: dotted 1px silver;}
 fieldset legend {font-weight: bold;}
 table {border-spacing: 0;}
 table th {padding: 3px 5px; text-align: left;background: grey;color: white;}
 table td {padding: 3px 5px;}
-code {color: white; font-weight: bold; background: #232323; padding: 2px 5px;}
 
 .add_record p {float: left;}
 .content_left {float: left;}
