--- a/MvcLuceneSampleApp/Views/Shared/_Layout.cshtml
+++ b/MvcLuceneSampleApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 		<h3>Simple Lucene.Net Usage Example Site</h3>
 	</div>
 
-  <div class="content">
+  <div class="content clearfix">
 		@RenderBody()
 	</div>
 	
