--- a/WebFormsLuceneSampleApp/Content/style.css
+++ b/WebFormsLuceneSampleApp/Content/style.css
@@ -21,13 +21,12 @@ a:hover {color: black;}
   box-shadow: 5px 5px 30px -10px silver, -5px 5px 30px -10px silver;
   background:#f5f5f5;
 }
-.content { margin-bottom: 150px;}
+.content { margin-bottom: 70px;}
 .footer {
 	left: 0; bottom: 0;right: 0; border-top: dotted 0px silver;;
   background: white;text-align: center;
 	box-shadow: 5px 0px 30px -5px silver, -5px 0px 30px -5px silver;
-	background:#f5f5f5;
-  position: fixed; width: 100%;
+	background:#f5f5f5; width: 100%;
   padding: 3px 0px; margin-bottom: 0px;
 }
 
